prevented the overflow of the post button in small mobile screens

--- a/modules/shared/components/molecules/PostFooterCreation/PostFooterCreation.module.css
+++ b/modules/shared/components/molecules/PostFooterCreation/PostFooterCreation.module.css
@@ -9,5 +9,5 @@
 }
 
 .responsive-button {
-  @apply md:hidden flex justify-between;
+  @apply md:hidden flex justify-end;
 }
